--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#menu">Menu</a>
+            <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -56,21 +56,7 @@
     </div>
   </section>
   
-    <!-- About Section -->
-    <section id="about" class="container py-5">
-      <div class="row">
-        <div class="col-md-6">
-          <h2>About Us</h2>
-          <p>Welcome to [Restaurant Name], where we believe in offering more than just a meal – we offer an experience. Nestled in the heart of [City], our restaurant has been serving delicious meals made with love and care for over [X] years.</p>
-          <p>At [Restaurant Name], we pride ourselves on using only the freshest, locally-sourced ingredients to create mouthwatering dishes that will tantalize your taste buds. Whether you're craving classic comfort food or adventurous flavors from around the world, our menu has something for everyone.</p>
-          <p>But it's not just about the food – it's about the atmosphere. Our cozy and inviting restaurant provides the perfect setting for a casual lunch with friends, a romantic dinner for two, or a special celebration with family. Our friendly staff is dedicated to providing exceptional service to ensure that every visit is a memorable one.</p>
-          <p>Come dine with us and discover why [Restaurant Name] is not just a place to eat, but a destination to savor and enjoy. We look forward to welcoming you!</p>
-        </div>
-        <div class="col-md-6">
-          <img src="2.jpg" alt="About Us Image" class="img-fluid">
-        </div>
-      </div>
-    </section>
+
   <!-- Menu Section -->
 <section id="menu" class="bg-light py-5">
   <div class="container text-center">
@@ -136,34 +122,7 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">Contact Us</h2>
-      <div class="row">
-        <div class="col-md-6">
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Your Name">
-            </div>
-            <div class="form-group">
-              <input type="email" class="form-control" placeholder="Your Email">
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" placeholder="Your Message" rows="5"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-        <div class="col-md-6">
-          <h4>Location</h4>
-          <p>123 Main Street<br>City, State, ZIP</p>
-          <h4>Phone</h4>
-          <p>(123) 456-7890</p>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-4">
