--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: yellow;">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -33,127 +33,136 @@
         </div>
       </div>
     </nav>
+  <!-- Menu section -->
   <div class="container mt-5">
-    <h2 class="text-center mb-4">INDIAN MENU</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <!-- Image 1 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.1.jpg" class="card-img-top" alt="Image 1">
-          <div class="card-body">
-            <h5 class="card-title">Image 1 Name</h5>
-            <p class="card-text">Description of Image 1</p>
+    <h2 class="text-center mb-4">Main Menu</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">     
+        <section id="about" class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Appetizers:</h2>
+              <ul>
+                <li><p>Garlic Bread</p></li> 
+                <li><p>Bruschetta</p></li> 
+                <li><p>Caprese Salad</p></li>
+                <li><p>Chicken Wings</p></li>
+                <li><p>Shrimp Cocktail</p></li>
+                <li><p>Soup of the Day</p></li>
+                <li><p>Spring Rolls</p></li>
+                <li><p>Stuffed Mushrooms</p></li>
+            </div>
+            <div class="col-md-6">
+              <img style="padding-top: 15vh;" src="Appetizers.jpg" alt="About Us Image"  class="img-fluid">
+            </div>
           </div>
-        </div>
-      </div>
-      <!-- Add more images as needed -->
-      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.2.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
+        </section>
+        <section id="about" class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Salads:</h2>
+              <ul>
+                <li><p>Caesar Salad</p></li> 
+                <li><p>Greek Salad</p></li> 
+                <li><p>Garden Salad</p></li>
+                <li><p>Cobb Salad</p></li>
+                <li><p>Waldorf Salad</p></li>
+                <li><p>Spinach Salad</p></li>
+                <li><p>Chef's Salad</p></li>
+                <li><p>Nicoise Salad</p></li>
+            </div>
+            <div class="col-md-6">
+              <img style="padding-top: 15vh;" src="Salads.jpg" alt="About Us Image"  class="img-fluid">
+            </div>
           </div>
-        </div>
-      </div>
-      <!-- Add more images as needed -->
-      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.3.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
+        </section>
+        <section id="about" class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Entrees:</h2>
+              <ul>
+                <li><p>Grilled Salmon</p></li> 
+                <li><p>                  Ribeye Steak</p></li> 
+                <li><p>                  Chicken Alfredo</p></li>
+                <li><p>                  Vegetable Stir-Fry</p></li>
+                <li><p>                  Eggplant Parmesan</p></li>
+                <li><p>                  Beef Burger</p></li>
+                <li><p>                  Fish Tacos</p></li>
+                <li><p>Spaghetti Carbonara</p></li>
+            </div>
+            <div class="col-md-6">
+              <img style="padding-top: 15vh;" src="Entrees.jpg" alt="About Us Image"  class="img-fluid">
+            </div>
           </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.4.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
+        </section>
+        <section id="about" class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Sides:</h2>
+              <ul>
+                <li><p>Mashed Potatoes</p></li> 
+                <li><p>Steamed Vegetables</p></li> 
+                <li><p>                  French Fries</p></li>
+                <li><p>                  Rice Pilaf</p></li>
+                <li><p>                  Baked Potato</p></li>
+                <li><p>                  Onion Rings</p></li>
+                <li><p>                  Coleslaw</p></li>
+                <li><p>                  Garlic Knots</p></li>
+            </div>
+            <div class="col-md-6">
+              <img style="padding-top: 15vh;" src="Sides.jpg" alt="About Us Image"  class="img-fluid">
+            </div>
           </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.5.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
+        </section>
+        <section id="about" class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Desserts:</h2>
+              <ul>
+                <li><p>New York Cheesecake</p></li> 
+                <li><p>                  Chocolate Lava Cake</p></li> 
+                <li><p>                  Apple Pie</p></li>
+                <li><p>                  Tiramisu</p></li>
+                <li><p>                  Crème Brûlée</p></li>
+                <li><p>                  Key Lime Pie</p></li>
+                <li><p>                  Strawberry Shortcake</p></li>
+                <li><p>                  Bread Pudding</p></li>
+            </div>
+            <div class="col-md-6">
+              <img style="padding-top: 15vh;" src="Desserts.jpg" alt="About Us Image"  class="img-fluid">
+            </div>
           </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.6.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
+        </section>
+        <section id="about" class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Beverages:</h2>
+              <ul>
+                <li><p>Soft Drinks</p></li> 
+                <li><p>                  Iced Tea</p></li> 
+                <li><p>                  Lemonade</p></li>
+                <li><p>                  Coffee</p></li>
+                <li><p>                  Hot Tea</p></li>
+                <li><p>                  Bottled Water</p></li>
+                <li><p>                  Milkshakes</p></li>
+                <li><p>                  Cocktails</p></li>
+            </div>
+            <div class="col-md-6">
+              <img style="padding-top: 15vh;" src="Beverages.jpg" alt="About Us Image"  class="img-fluid">
+            </div>
           </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.7.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
-          </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.8.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
-          </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.9.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
-          </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.10.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
-          </div>
-        </div>
-      </div>      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.11.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
-          </div>
-        </div>
-      </div>
-      <!-- Image 2 -->
-      <div class="col">
-        <div class="card h-100">
-          <img src="1.12.jpg" class="card-img-top" alt="Image 2">
-          <div class="card-body">
-            <h5 class="card-title">Image 2 Name</h5>
-            <p class="card-text">Description of Image 2</p>
-          </div>
-        </div>
-      </div>
-      <!-- Repeat the above structure for each image -->
+        </section>
+      
+ 
+
+      </div>      
     </div>
   </div>
-
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-4">
+    <div class="container">
+      <p>&copy; 2024 Restaurant Name. All Rights Reserved.</p>
+    </div>
+  </footer>
   <!-- Bootstrap JS (Bundle) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
