--- a/about.html
+++ b/about.html
@@ -7,14 +7,12 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: yellow;">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">Restaurant Name</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -44,9 +42,16 @@
                 <p>Come dine with us and discover why [Restaurant Name] is not just a place to eat, but a destination to savor and enjoy. We look forward to welcoming you!</p>
               </div>
               <div class="col-md-6">
-                <img src="2.jpg" alt="About Us Image" class="img-fluid">
+                <img style="padding-top: 15vh;" src="1.jpg" alt="About Us Image"  class="img-fluid">
               </div>
             </div>
           </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-4">
+    <div class="container">
+      <p>&copy; 2024 Restaurant Name. All Rights Reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
