--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Template</title>
+  <title>Code Geass</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -15,11 +15,15 @@
       background-image: url(cafe\ front.jpg);
       background-size: cover;
       background-position: center;
-      color: white; /* Adjust text color for better contrast */
+      color: white;
+      padding-bottom: 40vh;/* Adjust text color for better contrast */
+    }
+    .head{
+      padding-left: 20vh;
     }
   </style>
 </head>
-<body>
+<body style="background-color: yellow;">
 
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -49,10 +53,10 @@
 
   <!-- Hero Section -->
   <section class="jumbotron text-center hero-section">
-    <div class="container">
-      <h1>Welcome to Our Restaurant</h1>
+    <div class="container-fluid">
+      <h1 class="head" style="padding-top: 50vh;">Welcome to Our Restaurant</h1>
       <p class="lead">Experience the finest culinary delights</p>
-      <a href="#menu" class="btn btn-primary">View Menu</a>
+      <a href="menu.html" class="btn btn-primary">Menu</a>
     </div>
   </section>
   
@@ -60,51 +64,15 @@
   <!-- Menu Section -->
 <section id="menu" class="bg-light py-5">
   <div class="container text-center">
-    <h2>Our Menu</h2>
+    <h2>Our Gallery</h2>
     <div class="row">
-      <div class="col-md-4 mb-4">
-        <a href="menu.html"><img src="menu1.jpg" alt="Menu Item" class="img-fluid mb-3"></a>
-        <h4>Indian </h4>
-        <p class="text-muted">Description of the item 1</p>
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="https://via.placeholder.com/300" alt="Menu Item" class="img-fluid mb-3">
-        <h4>Item Name 2</h4>
-        <p class="text-muted">Description of the item 2</p>
-      </div>
-      <div class="col-md-4 mb-4">
-        <img src="https://via.placeholder.com/300" alt="Menu Item" class="img-fluid mb-3">
-        <h4>Item Name 3</h4>
-        <p class="text-muted">Description of the item 3</p>
+        <video src="about.mp4" autoplay width="360"></video>
       </div>
       <!-- Add more menu items as needed -->
     </div>
   </div>
 </section>
 
-
-  <!-- Gallery Section -->
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="100">
-        <img src="2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-bs-interval="100">
-        <img src="cafe front.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="2.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
 
   <!-- Testimonials Section -->
   <section class="bg-light py-5">
@@ -121,6 +89,8 @@
       </div>
     </div>
   </section>
+  
+  
 
 
 
