--- a/about.html
+++ b/about.html
@@ -26,28 +26,19 @@
 </head>
 <body style="display: hsl(38, 44%, 96%);">
   <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Restaurant Name</a>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="menu.html">Menu</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+  <header>
+    <img src="home.jpg" alt="Restaurant Header Image">
+    <div class="header-text">
+      <h1>Welcome to Our Restaurant</h1>
+      <p>Experience the Finest Quality in Every Dish</p>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact</a>
     </nav>
+  </header>
         <!-- About Section -->
         <section id="about" class="container py-5">
             <div class="row">
