--- a/index.html
+++ b/index.html
@@ -1,109 +1,58 @@
-
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Geass</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <!-- Custom CSS -->
+  <title>Restaurant Template</title>
   <style>
-    /* Your custom CSS styles go here */
-    .hero-section {
-      background-image: url(cafe\ front.jpg);
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding-bottom: 40vh;/* Adjust text color for better contrast */
-    }
-    .head{
-      padding-left: 20vh;
-    }
+
   </style>
 </head>
-<body style="background-color: yellow;">
+<body>
 
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Restaurant Name</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="menu.html">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
+  <header>
+    <img src="home.jpg" alt="Restaurant Header Image">
+    <div class="header-text">
+      <h1>Welcome to Our Restaurant</h1>
+      <p>Experience the Finest Quality in Every Dish</p>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section class="section-below-header">
+    <div style="color: green;" class="card">
+        <h2>About Our Restaurant</h2>
+        <p style="color: green;">Step into our elegantly designed dining space, where modern sophistication meets cozy comfort. Whether you're enjoying a romantic dinner for two, hosting a business lunch, or celebrating a special occasion with friends and family, our welcoming ambiance sets the stage for unforgettable moments.</p>
       </div>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <section class="jumbotron text-center hero-section">
-    <div class="container-fluid">
-      <h1 class="head" style="padding-top: 50vh;">Welcome to Our Restaurant</h1>
-      <p class="lead">Experience the finest culinary delights</p>
-      <a href="menu.html" class="btn btn-primary">Menu</a>
-    </div>
+      <img src="sec.jpg" alt="Section Image">
   </section>
-  
 
-  <!-- Menu Section -->
-<section id="menu" class="bg-light py-5">
-  <div class="container text-center">
-    <h2>Our Gallery</h2>
-    <div class="row">
-        <video src="about.mp4" autoplay width="360"></video>
+  <div class="container">
+    <div class="main-content">
+      <div class="image-gallery">
+        <img src="Salads.jpg" alt="Image 1">
+        <img src="Appetizers.jpg" alt="Image 2">
+        <img src="Desserts.jpg" alt="Image 3">
+        <img src="Sides.jpg" alt="Image 4">
+        <img src="Sides.jpg" alt="Image 5">
+        <img src="Salads.jpg" alt="Image 6">
+        <img src="Appetizers.jpg" alt="Image 7">
+        <img src="Salads.jpg" alt="Image 8">
       </div>
-      <!-- Add more menu items as needed -->
+      
     </div>
   </div>
-</section>
 
-
-  <!-- Testimonials Section -->
-  <section class="bg-light py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">Testimonials</h2>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <blockquote class="blockquote">
-            <p class="mb-0">"Great food, excellent service!"</p>
-            <footer class="blockquote-footer">John Doe</footer>
-          </blockquote>
-        </div>
-        <!-- Add more testimonials as needed -->
-      </div>
-    </div>
-  </section>
-  
-  
-
-
-
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-4">
-    <div class="container">
-      <p>&copy; 2024 Restaurant Name. All Rights Reserved.</p>
-    </div>
+  <footer>
+    <p>&copy; 2024 Our Restaurant. All rights reserved.</p>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
