--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
       bottom: 0;
       width: 100%;
     }
+    @media screen and (max-width: 768px) {
+  footer {
+    font-size: 14px; /* Adjust font size for smaller screens */
+  }
+}
+
+@media screen and (max-width: 576px) {
+  footer {
+    padding: 10px; /* Adjust padding for smaller screens */
+  }
+}
   </style>
 </head>
 <body>
