--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       margin: 0;
       padding: 0;
     }
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
     header {
       position: relative;
       text-align: center;
