--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <body>
 
   <header>
-    <img src="home.jpg" alt="Restaurant Header Image">
+    <img src="home.jpg" class="img-fluid" alt="Restaurant Header Image">
     <div class="header-text">
       <h1>Welcome to Our Restaurant</h1>
       <p>Experience the Finest Quality in Every Dish</p>
@@ -151,19 +151,19 @@
         <h2>About Our Restaurant</h2>
         <p style="color: green;">Step into our elegantly designed dining space, where modern sophistication meets cozy comfort. Whether you're enjoying a romantic dinner for two, hosting a business lunch, or celebrating a special occasion with friends and family, our welcoming ambiance sets the stage for unforgettable moments.</p>
       </div>
-      <img src="sec.jpg" alt="Section Image">
+      <img src="sec.jpg" class="img-fluid" alt="Section Image">
   </section>
 
   <div class="container">
     <div class="main-content">
       <div class="image-gallery">
-        <img src="Salads.jpg" alt="Image 1">
-        <img src="Appetizers.jpg" alt="Image 2">
-        <img src="Desserts.jpg" alt="Image 3">
-        <img src="Sides.jpg" alt="Image 4">
-        <img src="Sides.jpg" alt="Image 5">
-        <img src="Salads.jpg" alt="Image 6">
-        <img src="Appetizers.jpg" alt="Image 7">
+        <img src="Salads.jpg" class="img-fluid" alt="Image 1">
+        <img src="Appetizers.jpg"  class="img-fluid" alt="Image 2">
+        <img src="Desserts.jpg"  class="img-fluid" alt="Image 3">
+        <img src="Sides.jpg" class="img-fluid" alt="Image 4">
+        <img src="Sides.jpg" class="img-fluid" alt="Image 5">
+        <img src="Salads.jpg" class="img-fluid" alt="Image 6">
+        <img src="Appetizers.jpg" class="img-fluid" alt="Image 7">
         <img src="Salads.jpg" alt="Image 8">
       </div>
       
