--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <img src="sec.jpg" class="img-fluid" alt="Section Image">
   </section>
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="main-content">
       <div class="image-gallery">
         <img src="Salads.jpg" class="img-fluid" alt="Image 1">
