--- a/index.html
+++ b/index.html
@@ -139,10 +139,15 @@
       <p>Experience the Finest Quality in Every Dish</p>
     </div>
     <nav>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
       <a href="index.html">Home</a>
       <a href="menu.html">Menu</a>
       <a href="about.html">About Us</a>
       <a href="contact.html">Contact</a>
+     </div>
     </nav>
   </header>
 
