--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@ right: 5%;
     padding: 10px; /* Adjust padding for smaller screens */
   }
 }
+.img-fluid{
+  background-color: #fff;
+
+}
+img{
+  border-radius: 8px;
+}
+
   </style>
 </head>
 <body style="display: hsl(38, 44%, 96%);">
@@ -562,7 +570,7 @@ right: 5%;
         <img src="Sides.jpg" class="img-fluid" alt="Image 5">
         <img src="Salads.jpg" class="img-fluid" alt="Image 6">
         <img src="Appetizers.jpg" class="img-fluid" alt="Image 7">
-        <img src="Salads.jpg" alt="Image 8">
+        <img src="Salads.jpg" class="img-fluid" alt="Image 8">
       </div>
       
     </div>
@@ -627,7 +635,7 @@ right: 5%;
 
     </div>
 
-    <form action="forms/contact.php" method="post" role="form" class="php-email-form p-3 p-md-4">
+    <form action="" method="post" role="form" >
       <div class="row">
         <div class="col-xl-6 form-group">
           <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
